--- a/app/views/layout_unbranded.html
+++ b/app/views/layout_unbranded.html
@@ -63,6 +63,9 @@
                                         <a href="https://www.bathnes.gov.uk">Have your say</a>
                                       </li>
                                       <li class="navigation-primary-list__item">
+                                        <a href="https://www.bathnes.gov.uk">Find your nearest</a>
+                                      </li>
+                                      <li class="navigation-primary-list__item">
                                         <a href="https://www.bathnes.gov.uk">Contact us</a>
                                       </li>
                   
@@ -95,7 +98,7 @@
               <li><a href="/cookies">Cookies</a></li>
         </ul>
         <ul class="govuk-list footer-list">
-             <li><a href="/prototype-admin/clear-data">Clear data</li>
+             <li><a href="/prototype-admin/clear-data">Clear data</a></li>
 
           </ul>
         </div>
