--- a/app/views/rfs/about-child.html
+++ b/app/views/rfs/about-child.html
@@ -30,7 +30,7 @@
 
 
 
-<h2 class="govuk-heading-l">Before you start</h2>
+<h2 class="govuk-heading-l">About the child</h2>
 
 <p class="govuk-body">Make sure that the child is living in Bath and North East Somerset. You can do this by <a href ='https://www.gov.uk/find-local-council'>finding their local council</a>.</p>
 
