--- a/app/assets/sass/components/_overides.scss
+++ b/app/assets/sass/components/_overides.scss
@@ -1,3 +1,14 @@
 .govuk-width-container{
-  max-width: 1100px;
+  max-width: 9600px;
+}
+
+.breakout-box .govuk-warning-text{
+  margin: 0;
+}
+
+
+@include govuk-media-query($from: desktop){
+  .govuk-width-container{
+    max-width: 1100px;
+  }
 }
