--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -5,9 +5,15 @@
 
 .header-wrapper {
 	position: relative;
-	max-width: 1100px;
+	max-width: 9600px;
 	margin: 0 auto;
 	padding: 1em 15px
+}
+
+@include govuk-media-query($from: desktop){
+  .header-wrapper {
+    max-width: 1100px;
+  }
 }
 
 @media (min-width:960px) {
