--- a/public/sass/unbranded.scss
+++ b/public/sass/unbranded.scss
@@ -28,4 +28,4 @@ $govuk-canvas-background-colour: $govuk-body-background-colour;
 @import "components/footer";
 @import "components/aside";
 @import "components/overides";
-@import "components/breakout-box"
+@import "components/breakout-box";
