--- a/app/views/significant_harm.html
+++ b/app/views/significant_harm.html
@@ -9,105 +9,123 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-
-{{ govukBackLink({
-  text: "Back",
-  href: "your_concerns.html"
-}) }}
+         
+<a href="your_concerns.html" class="govuk-back-link">Back</a>
   
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="significant-harm-hint">
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+    <h1 class="govuk-fieldset__heading">
+      What sort of significant harm is this child at risk of?
+    </h1>
+  </legend>
+  
+  <span id="significant-harm-hint" class="govuk-hint">
+    Select all that apply
+  </span>
 
-{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
-
-{{ govukCheckboxes({
-  idPrefix: "nationality",
-  name: "nationality",
-  fieldset: {
-    legend: {
-      text: "What sort of significant harm is this child at risk of?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--xl"
-    }
-  },
-  hint: {
-    text: "Select all that apply"
-  },
-  items: [
-    {
-      value: "emotional_abuse",
-      text: "Emotional abuse",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    },
-    {
-      value: "physical_abuse",
-      text: "Physical abuse",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    },
-    {
-      value: "sexual_abuse",
-      text: "Sexual abuse",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    },
-    {
-      value: "serious_neglect",
-      text: "Serious neglect",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    },
-    {
-      value: "child_exploitation",
-      text: "Child exploitation",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    },
-    {
-      value: "radicalisation",
-      text: "Radicalisation",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    }
+  <div class="govuk-checkboxes">
+        
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-1" name="significant-harm" type="checkbox" value="emotional_abuse" aria-describedby="nationality-item-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-1">
+        Emotional abuse
+      </label>
+      
+      <span id="significant-harm-1-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
     
-  ]
-}) }}
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-2" name="significant-harm" type="checkbox" value="physical_abuse" aria-describedby="significant-harm-hint-2">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-2">
+        Physical abuse
+      </label>
+      
+      <span id="significant-harm-2-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
+ 
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-3" name="significant-harm" type="checkbox" value="sexual_abuse" aria-describedby="significant-harm-3-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-3">
+        Sexual abuse
+      </label>
+      
+      <span id="significant-harm-3-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-4" name="significant-harm" type="checkbox" value="serious_neglect" aria-describedby="significant-harm-4-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-4">
+        Serious neglect
+      </label>
+      
+      <span id="significant-harm-4-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
+    
+    
+    
+    
+    
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-5" name="significant-harm" type="checkbox" value="child_exploitation" aria-describedby="nationality-5-item-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-5">
+        Child exploitation
+      </label>
+      
+      <span id="significant-harm-5-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-6" name="significant-harm-6" type="checkbox" value="radicalisation" aria-describedby="significant-harm-6-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-6">
+        Radicalisation
+      </label>
+      
+      <span id="significant-harm-6-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
+    
+    <div class="govuk-radios__divider">or</div>
 
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="significant-harm-7" name="significant-harm-7" type="checkbox" value="none of the above">
+      <label class="govuk-label govuk-checkboxes__label" for="significant-harm-7">
+        None of the above, it's something else
+      </label>
+      
+      
+      
+    </div>
+  </div>
+  </fieldset>
+</div>
 
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
-
-{{ govukRadios({
-  idPrefix: "something-else",
-  name: "where-do-you-live",
-  
-  items: [
-    {
-      divider: "or"
-    },
-    {
-      value: "other",
-      text: "None of the above, it's something else"
-    }
-  ]
-}) }}
-
-
-     
-
-      {% from "govuk/components/button/macro.njk" import govukButton %}
-
-{{ govukButton({
-  text: "Continue",
-  href: "/check-your-answers",
-  isStartButton: false
-}) }}
-
+<a href="/concern-issue" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+  Continue
+</a>
       
     </div>
 </div>
