--- a/app/views/your_concerns.html
+++ b/app/views/your_concerns.html
@@ -22,6 +22,7 @@
         </div>
 
 </div>
+<form action="/concerning-issues" method="post" class="form">
 
   
 <div class="govuk-form-group">
@@ -34,7 +35,7 @@
   <div class="govuk-radios">
     
     <div class="govuk-radios__item">
-      <input class="govuk-radios__input" id="how-concerned" name="how-concerned" type="radio" value="significant-harm" aria-describedby="how-concerned-item-hint">
+      <input class="govuk-radios__input" id="how-concerned" name="concerning-issues" type="radio" value="significant-harm" aria-describedby="how-concerned-item-hint">
       <label class="govuk-label govuk-radios__label govuk-label--s" for="how-concerned">
         I'm concerned that a child is suffering or likely to suffer significant harm
       </label>
@@ -47,7 +48,7 @@
     
     
     <div class="govuk-radios__item">
-      <input class="govuk-radios__input" id="how-concerned-2" name="how-concerned" type="radio" value="childs-wellbeing" aria-describedby="how-concerned-2-item-hint">
+      <input class="govuk-radios__input" id="how-concerned-2" name="concerning-issues" type="radio" value="childs-wellbeing" aria-describedby="how-concerned-2-item-hint">
       <label class="govuk-label govuk-radios__label govuk-label--s" for="how-concerned-2">
         I'm concerned about a child's wellbeing. They have complex needs and other support hasn't worked
       </label>
@@ -60,7 +61,7 @@
     
     
     <div class="govuk-radios__item">
-      <input class="govuk-radios__input" id="how-concerned-3" name="how-concerned" type="radio" value="early-help" aria-describedby="how-concerned-3-item-hint">
+      <input class="govuk-radios__input" id="how-concerned-3" name="concerning-issues" type="radio" value="support-child" aria-describedby="how-concerned-3-item-hint">
       <label class="govuk-label govuk-radios__label govuk-label--s" for="how-concerned-3">
         I'm looking to get support for a child (or their family) before their needs escalate
       </label>
@@ -75,9 +76,10 @@
 
 </div>
   
-<a href="significant_harm.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-  Continue
-</a>
+
+<button class="govuk-button" data-module="govuk-button">Continue</button>
+
+</form>
   
     </div>
 </div>
