--- a/app/views/child_details_known.html
+++ b/app/views/child_details_known.html
@@ -12,7 +12,7 @@ GOV.UK Prototype Kit
 
     {{ govukBackLink({
           text: "Back",
-          href: "index"
+          href: "javascript: window.history.go(-1)"
         }) }}
 
     <form action="/child-known" method="post" class="form">
