--- a/app/views/outcome_4.html
+++ b/app/views/outcome_4.html
@@ -10,14 +10,13 @@ GOV.UK Prototype Kit
     {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
     {{ govukBackLink({
-            text: "Back",
-            href: "javascript: window.history.go(-1)"
-          }) }}
+              text: "Back",
+              href: "javascript: window.history.go(-1)"
+            }) }}
 
     {% from "govuk/components/table/macro.njk" import govukTable %}
 
-    <h1 class="govuk-heading-xl">Outcome 3 Report your concerns about a child or young person as a member of the public.
-    </h1>
+    <h1 class="govuk-heading-xl">Report your concerns about a child or young person as a member of the public.</h1>
 
 
     <p class="govuk-body">If you are concerned about the well being of a child contact the Children & Families Duty and
