--- a/app/views/professional_contact_details.html
+++ b/app/views/professional_contact_details.html
@@ -1,58 +1,58 @@
-
 {% extends "layout_unbranded.html" %}
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+GOV.UK Prototype Kit
 {% endblock %}
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
 
 
 
 
-      {% from "govuk/components/input/macro.njk" import govukInput %}
-      {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
-      {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
+    {% from "govuk/components/input/macro.njk" import govukInput %}
+    {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
+    {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
 
 
-      {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+    {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
-        {{ govukBackLink({
+    {{ govukBackLink({
           text: "Back",
-          href: "your_relationship"
+          href: "javascript: window.history.go(-1)"
         }) }}
-      
-        <form action="/check-your-answers" method="post" class="form">
+
+    <form action="/check_your_answers" method="post" class="form">
 
 
-          <div class="govuk-form-group">
-              <label class="govuk-label" for="professional-name">
-                Your name
-              </label>
-            
-              <input class="govuk-input govuk-!-width-three-quarters" id="professional-name" name="professional-name" type="text" value="{{ data['professional-name'] }}" type="text">
-            </div>
-  
-          <button class="govuk-button" data-module="govuk-button">Continue</button>
-  
-        </form>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="professional-name">
+          Your name
+        </label>
+
+        <input class="govuk-input govuk-!-width-three-quarters" id="professional-name" name="professional-name"
+          type="text" value="{{ data['professional-name'] }}" type="text">
+      </div>
+
+      <button class="govuk-button" data-module="govuk-button">Continue</button>
+
+    </form>
 
 
 
 
 
-      {% call govukFieldset({
+    {% call govukFieldset({
         legend: {
           text: "Professional contact details?",
           classes: "govuk-fieldset__legend--xl",
           isPageHeading: true
         }
       }) %}
-      
-        {{ govukInput({
+
+    {{ govukInput({
           label: {
             html: 'Your name'
           },
@@ -61,8 +61,8 @@
           classes: "govuk-!-width-three-quarters",
           value: ""
         }) }}
-      
-        {{ govukInput({
+
+    {{ govukInput({
           label: {
             html: 'Your job title or role'
           },
@@ -70,8 +70,8 @@
           name: "professional-job",
           classes: "govuk-!-width-three-quarters"
         }) }}
-      
-        {{ govukInput({
+
+    {{ govukInput({
           label: {
             text: "The agency or organisation you work for"
           },
@@ -80,7 +80,7 @@
           classes: "govuk-!-width-three-quarters"
         }) }}
 
-        {{ govukInput({
+    {{ govukInput({
           label: {
             text: "Your address"
           },
@@ -88,8 +88,8 @@
           name: "professional-address",
           classes: "govuk-!-width-three-quarters"
         }) }}
-      
-        {{ govukInput({
+
+    {{ govukInput({
           label: {
             text: "Your email"
           },
@@ -97,8 +97,8 @@
           name: "professional-email",
           classes: "govuk-!-width-three-quarters"
         }) }}
-      
-        {{ govukInput({
+
+    {{ govukInput({
           label: {
             text: "Your phone number"
           },
@@ -107,26 +107,26 @@
           classes: "govuk-!-width-three-quarters"
         }) }}
 
-        {{ govukTextarea({
+    {{ govukTextarea({
           name: "professional-role-family",
           id: "professional-role-family",
           label: {
             text: "Your role with the family"
           }
         }) }}
-      
-      {% endcall %}
 
-      {% from "govuk/components/button/macro.njk" import govukButton %}
+    {% endcall %}
 
-{{ govukButton({
+    {% from "govuk/components/button/macro.njk" import govukButton %}
+
+    {{ govukButton({
   text: "Continue",
   href: "your_concerns.html",
   isStartButton: false
 }) }}
 
-      
-    </div>
+
+  </div>
 </div>
 
 {% endblock %}
