--- a/app/views/outcome_3.html
+++ b/app/views/outcome_3.html
@@ -16,29 +16,46 @@ GOV.UK Prototype Kit
 
     {% from "govuk/components/table/macro.njk" import govukTable %}
 
-    <h1 class="govuk-heading-xl">Outcome 3 Report your concerns about a child or young person as a member of the public.
+    <h1 class="govuk-heading-xl">Here are some suggested next steps, based on what you've told us.
     </h1>
 
+    <p class="govuk-body">Based on what you have told us, we do not think this meets the threshold for complex
+      multi-agency Early Help Services or safeguarding intervention.</p>
 
-    <p class="govuk-body">If you are concerned about the well being of a child contact the Children & Families Duty and
-      Assessment Team on 01225 123456</p>
+    <p class="govuk-body">You should be able to support this child or family's additional needs by signposting them to a
+      single agency.</p>
 
-    <p class="govuk-body">When our offices are closed call the Emergency Duty Team on 01454 615 165</p>
-
-    <p class="govuk-body">If the child is at immediate risk call the Police on 999.</p>
-
-    <p class='govuk-body'>If you're unable to use a phone, tell us your preferred communication method.</p>
-
-    <p class="govuk-body">Other numbers you can call:</p>
-
+    <h3 class="govuk-heading-m">Consider refering the family to:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>NSPCC 24 hour Helpline: 0800 800 5000 (free from a landline)</li>
-      <li>NSPCC Asian Languages Helpline: 0808 800 5000 (free from a landline)</li>
-      <li>NSPCC Text helpline: 88858 (service is free and anonymous)</li>
-      <li>Police: 101 (non-emergency calls)</li>
+      <li>Agency 1 www.######</li>
+      <li>Agency 2 www.######</li>
     </ul>
 
+    <h3 class="govuk-heading-m">Useful resources:</h3>
 
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Early Help App www.######</li>
+      <li>Rainbow Resource www.######</li>
+      <li>1Bigdatabase www.######</li>
+    </ul>
+
+    <h3 class="govuk-heading-m">Complete an Early Help Assessment</h3>
+
+    <p class="govuk-body">Consider using the EHA as a way to identify needs and plan a response, either single agency
+      or with the support of another agency. Details of which can be found via the Early Help App. </p>
+
+    <p class="govuk-body">You may consider contacting your safeguarding lead within your agency for further support and
+      guidance at this level.</p>
+    <div class="breakout-box">
+
+      {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
+      {{ govukWarningText({
+            text: "If there are any further incidents regarding this child and you want our help, please contact us.",
+            iconFallbackText: "Warning"
+          }) }}
+
+
+    </div>
   </div>
 </div>
 
