--- a/app/views/significant_harm.html
+++ b/app/views/significant_harm.html
@@ -11,6 +11,9 @@ GOV.UK Prototype Kit
 
     <a href="javascript: window.history.go(-1)" class="govuk-back-link">Back</a>
 
+    <form action="/harm" method="post" class="form">
+
+
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset" aria-describedby="significant-harm-hint">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
@@ -26,7 +29,7 @@ GOV.UK Prototype Kit
         <div class="govuk-checkboxes">
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-1" name="significant-harm" type="checkbox"
+            <input class="govuk-checkboxes__input" id="significant-harm-1" name="harm" type="checkbox"
               value="emotional_abuse" aria-describedby="nationality-item-hint">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-1">
               Emotional abuse
@@ -41,7 +44,7 @@ GOV.UK Prototype Kit
 
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-2" name="significant-harm" type="checkbox"
+            <input class="govuk-checkboxes__input" id="significant-harm-2" name="harm" type="checkbox"
               value="physical_abuse" aria-describedby="significant-harm-hint-2">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-2">
               Physical abuse
@@ -56,7 +59,7 @@ GOV.UK Prototype Kit
 
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-3" name="significant-harm" type="checkbox"
+            <input class="govuk-checkboxes__input" id="significant-harm-3" name="harm" type="checkbox"
               value="sexual_abuse" aria-describedby="significant-harm-3-hint">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-3">
               Sexual abuse
@@ -71,7 +74,7 @@ GOV.UK Prototype Kit
 
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-4" name="significant-harm" type="checkbox"
+            <input class="govuk-checkboxes__input" id="significant-harm-4" name="harm" type="checkbox"
               value="serious_neglect" aria-describedby="significant-harm-4-hint">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-4">
               Serious neglect
@@ -91,7 +94,7 @@ GOV.UK Prototype Kit
 
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-5" name="significant-harm" type="checkbox"
+            <input class="govuk-checkboxes__input" id="significant-harm-5" name="harm" type="checkbox"
               value="child_exploitation" aria-describedby="nationality-5-item-hint">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-5">
               Child exploitation
@@ -106,7 +109,7 @@ GOV.UK Prototype Kit
 
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-6" name="significant-harm-6" type="checkbox"
+            <input class="govuk-checkboxes__input" id="significant-harm-6" name="harm" type="checkbox"
               value="radicalisation" aria-describedby="significant-harm-6-hint">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-6">
               Radicalisation
@@ -122,8 +125,8 @@ GOV.UK Prototype Kit
           <div class="govuk-radios__divider">or</div>
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-7" name="significant-harm-7" type="checkbox"
-              value="none of the above">
+            <input class="govuk-checkboxes__input" id="significant-harm-7" name="harm" type="checkbox"
+              value="none">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-7">
               None of the above, it's something else
             </label>
@@ -135,9 +138,9 @@ GOV.UK Prototype Kit
       </fieldset>
     </div>
 
-    <a href="/concern-issue" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-      Continue
-    </a>
+    <button class="govuk-button" data-module="govuk-button">Continue</button>
+
+  </form>
 
   </div>
 </div>
