added more routes

--- a/app/views/significant_harm.html
+++ b/app/views/significant_harm.html
@@ -11,7 +11,7 @@ GOV.UK Prototype Kit
 
     <a href="javascript: window.history.go(-1)" class="govuk-back-link">Back</a>
 
-    <form action="/harm" method="post" class="form">
+    <form action="/type-of-harm" method="post" class="form">
 
 
     <div class="govuk-form-group">
@@ -125,13 +125,10 @@ GOV.UK Prototype Kit
           <div class="govuk-radios__divider">or</div>
 
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="significant-harm-7" name="harm" type="checkbox"
-              value="none">
+            <input class="govuk-checkboxes__input" id="significant-harm-7" name="none" type="checkbox" value="none">
             <label class="govuk-label govuk-checkboxes__label" for="significant-harm-7">
               None of the above, it's something else
             </label>
-
-
 
           </div>
         </div>
