--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
     	{% from "govuk/components/table/macro.njk" import govukTable %}
 
 
-<h1 class="govuk-heading-xl">Contact us with a concern about a Child or Young Person</h1>
+<h1 class="govuk-heading-xl govuk-!-margin-bottom-2">Contact us with a concern about a Child or Young Person</h1>
 <p class="govuk-body">This form is for anyone who has a concern about a child or young person.</p>
 
 <p class="govuk-body">By filling in this form you’ll be helping us decide what kind of support is most appropriate for the child, young person or family.</p>
